Minor changes to intro slides

--- a/app/src/main/res/layout/fragment_intro_page_2.xml
+++ b/app/src/main/res/layout/fragment_intro_page_2.xml
@@ -29,7 +29,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="100dp"
         android:layout_marginEnd="8dp"
-        android:text="Hurtige væskeregistreringer \n med et enkelt klik! "
+        android:text="Tilføj en væskeregistrering \n med blot et enkelt klik! "
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
