--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="background_color">#ffffff</color>
     <color name="shadow_color">#BFE0FA</color>
     <color name="material_card_view_color">#3390CAF9</color>
+    <color name="transparent">#0090CAF9</color>
+
     <!--<color name="background_color">#a8dae6</color>
     <color name="background_darker">#83d1e4</color>
     !-->
