--- a/app/src/main/res/layout/edit_liquid.xml
+++ b/app/src/main/res/layout/edit_liquid.xml
@@ -141,7 +141,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintEnd_toStartOf="@+id/value_weight"
+            app:layout_constraintEnd_toStartOf="@+id/weight_layout"
             app:layout_constraintGuide_percent="0.85"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -219,7 +219,7 @@
         </LinearLayout>
 
         <EditText
-            android:id="@+id/value_weight"
+            android:id="@+id/weight_layout"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="5dp"
