Dashboard button text size fix

--- a/app/src/main/res/layout/dashboard_frag.xml
+++ b/app/src/main/res/layout/dashboard_frag.xml
@@ -113,8 +113,7 @@
                 android:id="@+id/vagt_knap"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
-                android:autoSizeMaxTextSize="13dp"
-                android:autoSizeTextType="uniform"
+                android:textSize="14sp"
                 android:background="@drawable/roundedcorners"
                 android:backgroundTint="@color/colorPrimaryDark"
                 android:elevation="4dp"
