--- a/app/src/main/res/layout/registration_custom_frag.xml
+++ b/app/src/main/res/layout/registration_custom_frag.xml
@@ -60,7 +60,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Mængde">
+            android:hint="Mængde i ml">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/amountofliquid"
