--- a/app/src/main/res/layout/dashboard_frag.xml
+++ b/app/src/main/res/layout/dashboard_frag.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.measurelet.Dashboard_frag">
+    tools:context="com.measurelet.dashboard.DashboardFrag">
 
 
     <com.robinhood.spark.SparkView
