--- a/app/src/main/res/layout/registration_custom_frag.xml
+++ b/app/src/main/res/layout/registration_custom_frag.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.measurelet.Registration_custom_frag">
+    tools:context="com.measurelet.dashboard.RegistrationCustomFrag">
 
     <LinearLayout
         android:layout_width="0dp"
